# LETMEDRAWINPC

./: A FAIRE.txt  CMakeLists.txt  README.md  commandes.txt
3DS/: CMakeLists.txt  LETMEDRAWINPC.3dsx  LETMEDRAWINPC.elf  LETMEDRAWINPC.smdh
3DS/LETMEDRAWINPC/: CMakeLists.txt  LETMEDRAWINPC.3dsx  LETMEDRAWINPC.elf  LETMEDRAWINPC.smdh  Makefile
3DS/LETMEDRAWINPC/Include/: Controls.h  FlagStructData.h
3DS/LETMEDRAWINPC/Source/: Controls.c  FlagStructData.c  main.c
3DS/Source/: main.c
PC/: CMakeLists.txt  test.c  test.h
PC/LETMEDRAWINPC/: CMakeLists.txt  Client.c  Client.h  ConfigExample.json  Configuration.json  Controls.c  Controls.h  Debug.c  Debug.h  InputInfo.c  InputInfo.h  Server.c  Server.h  main.c  test.c  test.h
